overflow fixed

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,14 +1,20 @@
-.home .col-3,
-.home .col-5{
+.home .col-3{
     height: 300px;
     font-weight: bold;
     font-size: large;
+    border-radius: 5px;
+}
+.home .col-5{
+    height: 575px;
+    margin-bottom: 20px;
+    border-radius: 5px;
 }
 .home .btn{
     border-radius: 50%;
     font-weight: bolder;
 }
 .home .busket{
-    height: 5px;
+    height: 15px;
     border: 1px solid black;
+    border-radius: 5px;
 }
